--- a/app/mms.html
+++ b/app/mms.html
@@ -63,5 +63,8 @@
   <script src="js/mms/app.js"></script>
   <script src="js/mms/controllers.js"></script>
 
+  <!-- d3-->
+  <script src="lib/d3/d3.v3.min.js"></script>
+
 </body>
 </html>
