--- a/app/mms.html
+++ b/app/mms.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="css/mm-mms.styles.min.css" rel="stylesheet" type="text/css">
   <link href="css/ve-mms.styles.min.css" rel="stylesheet" type="text/css">
+  <link href="css/c3/c3.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -64,8 +65,9 @@
   <script src="js/mms/app.js"></script>
   <script src="js/mms/controllers.js"></script>
 
-  <!-- d3-->
-  <script src="lib/d3/d3.v3.min.js"></script>
+  <!-- d3 and c3 -->
+  <script src="lib/d3/d3.v3.min.js" charset="utf-8"></script>
+  <script src="lib/d3/c3.min.js"></script>
 
 </body>
 </html>
